# rules_doxygen

./: .gitignore  BUILD.bazel  CHANGELOG.md  Doxyfile.template  LICENSE  MODULE.bazel  README.md  doxygen.BUILD.bazel  doxygen.bzl  extensions.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  dependencies.yml  publish.yml  release.yml  release_prep.sh
docs/: BUILD.bazel  doxygen_doc.md  extensions_doc.md
doxygen/: BUILD.bazel  Doxyfile.template  doxygen.bzl
examples/: BUILD.bazel  MODULE.bazel  doxygen_source.BUILD.bazel  git_archive.bzl
examples/awesome/: BUILD.bazel  README.md  lib.cpp
examples/awesome/_static/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  footer.html  header.html
examples/base/: BUILD.bazel  lib.h
examples/custom/: BUILD.bazel  Doxyfile  README.md  lib.h
examples/dependencies/: BUILD.bazel  README.md  add.cpp  add.h  lib.h  main.cpp  sub.cpp  sub.h
examples/doxyfile/: BUILD.bazel  Doxyfile  README.md  lib.h
examples/doxylink/: BUILD.bazel  README.md  conf.py  index.rst  lib.h  requirements.txt
examples/executable/: BUILD.bazel  README.md  main.cpp
examples/graphviz/: BUILD.bazel  README.md  lib.cpp  lib.h
examples/kwargs/: BUILD.bazel  README.md  lib.cpp
examples/latex/: BUILD.bazel  README.md
examples/nested/: BUILD.bazel  README.md
examples/nested/lib_a/: BUILD.bazel  lib_a.cpp  lib_a.h
examples/nested/lib_b/: lib_b.cpp  lib_b.h
examples/plantuml/: BUILD.bazel  README.md  lib.h
examples/source/: BUILD.bazel
examples/submodules/: README.md
examples/submodules/root/: MODULE.bazel  README.md
examples/submodules/submodule1/: BUILD.bazel  MODULE.bazel
examples/submodules/submodule2/: BUILD.bazel  MODULE.bazel  README.md
examples/substitutions/: BUILD.bazel  Doxyfile.template  README.md  lib.h  make_var_substitution.bzl
submodules/: README.md
submodules/root/: BUILD.bazel  MODULE.bazel
submodules/submodule1/: MODULE.bazel  README.md
submodules/submodule2/: MODULE.bazel
