load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "bazel_tools_http",
    srcs = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

stardoc(
    name = "doxygen_doc",
    out = "doxygen_doc.md",
    input = "@rules_doxygen//:doxygen.bzl",
)

stardoc(
    name = "extensions_doc",
    out = "extensions_doc.md",
    input = "@rules_doxygen//:extensions.bzl",
    deps = [":bazel_tools_http"],
)
