module(name = "rules_doxygen_examples")

bazel_dep(name = "rules_doxygen", dev_dependency = True)
local_path_override(
    module_name = "rules_doxygen",
    path = "../",
)

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
# Test doxygen_extension with a system installation of doxygen
# doxygen_extension.version(version = "0.0.0")
use_repo(doxygen_extension, "doxygen")
