module(name = "rules_doxygen_examples")

bazel_dep(name = "rules_doxygen", dev_dependency = True)
local_path_override(
    module_name = "rules_doxygen",
    path = "../",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")

# doxygen_extension with a system installation of doxygen
# doxygen_extension.configuration(version = "0.0.0")

# Multiple versions of doxygen for different platforms
# doxygen_extension.configuration(version = "1.10.0", sha256 = "dcfc9aa4cc05aef1f0407817612ad9e9201d9bf2ce67cecf95a024bba7d39747", platform = "linux")
# doxygen_extension.configuration(version = "1.12.0", sha256 = "6ace7dde967d41f4e293d034a67eb2c7edd61318491ee3131112173a77344001", platform = "mac")
# doxygen_extension.configuration(version = "1.11.0", sha256 = "478fc9897d00ca181835d248a4d3e5c83c26a32d1c7571f4321ddb0f2e97459f", platform = "windows")

# doxygen_extension with a provided doxygen binary
# doxygen_extension.configuration(executable = "@//:doxygen")

use_repo(doxygen_extension, "doxygen")
