module(name = "rules_doxygen_examples")

bazel_dep(name = "rules_doxygen", dev_dependency = True)
local_path_override(
    module_name = "rules_doxygen",
    path = "../",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "libconfig", version = "1.7.3")
bazel_dep(name = "rules_flex", version = "0.4")
bazel_dep(name = "rules_bison", version = "0.4")

github_archive = use_repo_rule("//:git_archive.bzl", "github_archive")

github_archive(
    name = "doxygen_source",
    build_file = "//:doxygen_source.BUILD.bazel",
    commit = "200cec9b87fa544f39deeb96966568985f40aea8",
    repository = "doxygen/doxygen",
    sha256 = "6aa71da24aa7b8fc8f9eba5a6651b1fb47c569c68d3e226b011d39a15087c2fb",
)

bison = use_extension(
    "@rules_bison//bison/extensions:bison_repository_ext.bzl",
    "bison_repository_ext",
)
bison.repository(
    name = "bison",
    version = "3.3.2",
    extra_copts = ["-O3"],
)
use_repo(bison, "bison")
register_toolchains("@bison//:toolchain")

flex = use_extension(
    "@rules_flex//flex/extensions:flex_repository_ext.bzl",
    "flex_repository_ext",
)
flex.repository(
    name = "flex",
    version = "2.6.4",
    extra_copts = ["-O3"],
)
use_repo(flex, "flex")
register_toolchains("@flex//:toolchain")

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")

# doxygen_extension with a system installation of doxygen
# doxygen_extension.configuration(version = "0.0.0")

# Multiple versions of doxygen for different platforms
# doxygen_extension.configuration(version = "1.10.0", sha256 = "dcfc9aa4cc05aef1f0407817612ad9e9201d9bf2ce67cecf95a024bba7d39747", platform = "linux")
# doxygen_extension.configuration(version = "1.12.0", sha256 = "6ace7dde967d41f4e293d034a67eb2c7edd61318491ee3131112173a77344001", platform = "mac")
# doxygen_extension.configuration(version = "1.11.0", sha256 = "478fc9897d00ca181835d248a4d3e5c83c26a32d1c7571f4321ddb0f2e97459f", platform = "windows")

# doxygen_extension with a provided doxygen binary
# doxygen_extension.configuration(executable = "@//:doxygen")

use_repo(doxygen_extension, "doxygen")
