load("@doxygen//:doxygen.bzl", "doxygen")

doxygen(
    name = "doxygen",
    srcs = ["README.md"] + glob([
        "*.h",
        "*.cpp",
    ]),
    aliases = [
        "licence=@par Licence:^^",
        "verb{1}=@verbatim \\1 @endverbatim",
    ],
    configurations = [
        "USE_MDFILE_AS_MAINPAGE = README.md",
        "MY_CUSTOM_CONFIG       = YES",
        "ANOTHER_CUSTOM_CONFIG  = NO",
    ],
    project_brief = "Example project for doxygen",
    project_name = "custom",
)
