load("@doxygen//:doxygen.bzl", "doxygen")

doxygen(
    name = "doxygen",
    srcs = ["README.md"] + glob([
        "*.h",
        "*.cpp",
    ]),
    outs = [
        "html",
        "latex",
    ],
    generate_html = True,
    generate_latex = True,
    project_brief = "Example project for doxygen",
    project_name = "doxyfile_latex",
    use_mdfile_as_mainpage = "latex/README.md",
)
