load("@doxygen//:doxygen.bzl", "doxygen")

doxygen(
    name = "doxygen",
    srcs = glob([
        "*.h",
        "*.cpp",
        "lib_b/*.h",
        "lib_b/*.cpp",
    ]) + ["//nested/lib_a:sources"],
    configurations = [
        # The rule should be able to determine the location of the srcs files, 
        # but it is still possible to specify the input location manually 
        # "INPUT = nested nested/lib_a nested/lib_b",
    ],
    project_brief = "Example project for doxygen",
    project_name = "nested",
)

doxygen(
    name = "doxygen_a",
    srcs = ["//nested/lib_a:sources"],
    outs = [
        "a/html",
        "a/tags",
    ],
    doxyfile_prefix = "a",
    project_brief = "Example project for doxygen, library A",
    project_name = "nested",
    generate_tagfile = "$(OUTDIR)/tags/tagfile.xml",
)

doxygen(
    name = "doxygen_b",
        srcs = glob([
        "lib_b/*.h",
        "lib_b/*.cpp",
    ]),
    outs = [
        "b/html",
        "b/tags",
    ],
    doxyfile_prefix = "b",
    project_brief = "Example project for doxygen, library B",
    project_name = "nested",
    generate_tagfile = "$(OUTDIR)/tags/tagfile.xml",
)
