load("@doxygen//:doxygen.bzl", "doxygen")
load("//substitutions:make_var_substitution.bzl", "make_var_substitution")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "build_version",
    build_setting_default = "0.0.0",
)

make_var_substitution(
    name = "make_var_substitution",
    variables = {
        "DESCRIPTION": "Example project for doxygen using make vars substitutions",
        "NAME": "substitutions",
    },
)

doxygen(
    name = "doxygen",
    srcs = glob([
        "*.h",
        "*.cpp",
    ]),
    project_brief = "$(DESCRIPTION)",
    project_name = "$(NAME)",
    project_number = "$(BUILD_VERSION)",
    toolchains = [":make_var_substitution"],
)
