module(name = "submodule2")

bazel_dep(name = "rules_doxygen", version = "2.3.0")
local_path_override(
    module_name = "rules_doxygen",
    path = "../../../",
)

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
doxygen_extension.repository(name = "submodule2_doxygen")
use_repo(doxygen_extension, "submodule2_doxygen")
